--- a/contracts/lootbox/package.json
+++ b/contracts/lootbox/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@chainlink/contracts": "0.5.1",
     "@ethersproject/networks": "5.7.1",
+    "@nomicfoundation/hardhat-network-helpers": "1.0.7",
     "@nomiclabs/hardhat-ethers": "2.2.1",
     "@nomiclabs/hardhat-etherscan": "3.1.3",
     "@nomiclabs/hardhat-waffle": "2.0.3",
