--- a/contracts/general/package.json
+++ b/contracts/general/package.json
@@ -66,7 +66,7 @@
     "preversion": "npm run build",
     "solhint": "solhint -f table contracts/**/*.sol contracts/**/**/*.sol",
     "test": "hardhat test",
-    "test:coverage": "hardhat coverage"
+    "coverage": "hardhat coverage"
   },
   "types": "./typechain-types/index.ts",
   "version": "1.1.18"
