--- a/contracts/lootbox/tsconfig.json
+++ b/contracts/lootbox/tsconfig.json
@@ -5,6 +5,7 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "lib": ["ES2021"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
@@ -14,14 +15,13 @@
     "noUnusedParameters": false,
     "outDir": "./dist",
     "resolveJsonModule": true,
-    "rootDir": "./src",
     "skipLibCheck": true,
     "sourceMap": true,
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": false,
-    "target": "es2017"
+    "target": "es2020"
   },
-  "exclude": ["node_modules", "dist", "test", "hardhat.config.ts"]
+  "exclude": ["node_modules", "dist"]
 }
