--- a/contracts/oracle/package.json
+++ b/contracts/oracle/package.json
@@ -5,15 +5,16 @@
     "url": "https://gemunion.io/"
   },
   "dependencies": {
-    "@ethersproject/abi": "5.7.0",
-    "@ethersproject/providers": "5.7.2",
     "@gemunion/contracts-mocha": "4.0.1",
+    "@gemunion/contracts-mocks": "4.0.1",
     "@nomicfoundation/hardhat-chai-matchers": "2.0.1",
+    "@nomicfoundation/hardhat-ethers": "3.0.1",
     "@nomicfoundation/hardhat-network-helpers": "1.0.8",
     "@nomicfoundation/hardhat-toolbox": "3.0.0",
+    "@nomicfoundation/hardhat-verify": "1.0.1",
     "@nomiclabs/hardhat-ethers": "2.2.3",
     "@nomiclabs/hardhat-etherscan": "3.1.7",
-    "@typechain/ethers-v5": "11.0.0",
+    "@typechain/ethers-v6": "0.4.0",
     "@typechain/hardhat": "8.0.0",
     "chai": "4.3.7",
     "hardhat-gas-reporter": "1.0.9",
@@ -22,7 +23,6 @@
   },
   "description": "Collection of contracts and presets",
   "devDependencies": {
-    "@ethersproject/networks": "5.7.1",
     "@openzeppelin/contracts": "4.9.0",
     "@types/chai": "4.3.5",
     "@types/mocha": "10.0.1",
