--- a/contracts/upgradeable/package.json
+++ b/contracts/upgradeable/package.json
@@ -6,14 +6,14 @@
   },
   "description": "Collection of contracts and presets",
   "dependencies": {
-    "@ethersproject/abi": "5.7.0",
-    "@ethersproject/providers": "5.7.2",
     "@nomicfoundation/hardhat-chai-matchers": "2.0.1",
+    "@nomicfoundation/hardhat-ethers": "3.0.1",
     "@nomicfoundation/hardhat-network-helpers": "1.0.8",
     "@nomicfoundation/hardhat-toolbox": "3.0.0",
+    "@nomicfoundation/hardhat-verify": "1.0.1",
     "@nomiclabs/hardhat-ethers": "2.2.3",
     "@nomiclabs/hardhat-etherscan": "3.1.7",
-    "@typechain/ethers-v5": "11.0.0",
+    "@typechain/ethers-v6": "0.4.0",
     "@typechain/hardhat": "8.0.0",
     "chai": "4.3.7",
     "hardhat-gas-reporter": "1.0.9",
@@ -21,7 +21,6 @@
     "typechain": "8.2.0"
   },
   "devDependencies": {
-    "@ethersproject/networks": "5.7.1",
     "@openzeppelin/contracts": "4.9.0",
     "@openzeppelin/contracts-upgradeable": "4.9.0",
     "@openzeppelin/hardhat-upgrades": "1.27.0",
@@ -46,7 +45,7 @@
   "name": "@gemunion/contracts-examples-upgradeable",
   "peerDependencies": {
     "@openzeppelin/contracts": "4.9.0",
-    "ethers": ".5.6.0"
+    "ethers": "^6.0.0"
   },
   "private": true,
   "publishConfig": {
