--- a/contracts/upgradeable/package.json
+++ b/contracts/upgradeable/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@openzeppelin/contracts": "4.9.0",
     "@openzeppelin/contracts-upgradeable": "4.9.0",
-    "@openzeppelin/hardhat-upgrades": "1.28.0",
+    "@openzeppelin/hardhat-upgrades": "2.0.0-alpha.0",
     "@types/chai": "4.3.5",
     "@types/mocha": "10.0.1",
     "@types/node": "18.16.18",
