--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
   "scripts": {
     "bootstrap": "lerna bootstrap --concurrency 1 --hoist --ignore-scripts",
     "build": "lerna run build --concurrency 1",
+    "lerna:version": "lerna --version",
+    "lerna:changed": "lerna changed",
+    "lerna:publish": "lerna publish from-package --yes --exact --ignore-scripts",
     "clean": "sh scripts/clean.sh",
     "lint": "lerna run lint --stream",
     "precommit": "lint-staged",
-    "release": "npm run release:version && npm run release:publish",
-    "release:publish": "lerna publish from-package --yes --exact --ignore-scripts --registry=https://npm.pkg.github.com/",
-    "release:version": "lerna version",
     "test": "sh scripts/test.sh"
   },
   "version": "3.0.0"
