--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "url": "https://gemunion.io/"
   },
   "dependencies": {
-    "lerna": "7.1.3",
-    "nx": "15.8.9"
+    "@lerna/legacy-package-management": "7.1.3",
+    "lerna": "7.1.3"
   },
   "devDependencies": {
     "@gemunion/eslint-config": "4.0.3",
