--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": {
-    "email": "trejgun+gemunion@gmail.com",
+    "email": "trejgun@gemunion.com",
     "name": "TrejGun",
     "url": "https://gemunion.io/"
   },
