--- a/contracts/open-sea/package.json
+++ b/contracts/open-sea/package.json
@@ -5,16 +5,25 @@
     "url": "https://gemunion.io/"
   },
   "dependencies": {
+    "@gemunion/contracts-access": "^5.0.28",
+    "@gemunion/contracts-constants": "^5.0.28",
+    "@gemunion/contracts-erc1363": "^5.0.28",
+    "@gemunion/contracts-erc721": "^5.0.28",
+    "@gemunion/contracts-erc721e": "^5.0.28",
+    "@gemunion/contracts-mocks": "^5.0.28",
+    "@gemunion/contracts-utils": "^5.0.28",
     "@nomicfoundation/hardhat-ignition": "0.15.4",
     "@nomicfoundation/hardhat-ignition-ethers": "0.15.4",
     "@nomicfoundation/hardhat-toolbox": "5.0.0"
   },
   "description": "Collection of contracts and presets",
   "devDependencies": {
+    "@chainlink/contracts": "1.1.0",
     "@nomicfoundation/hardhat-chai-matchers": "2.0.6",
     "@nomicfoundation/hardhat-ethers": "3.0.6",
     "@nomicfoundation/hardhat-network-helpers": "1.0.10",
     "@nomicfoundation/hardhat-verify": "2.0.7",
+    "@nomiclabs/hardhat-web3": "2.0.0",
     "@openzeppelin/contracts": "5.0.2",
     "@openzeppelin/test-helpers": "0.5.16",
     "@typechain/ethers-v6": "0.5.1",
@@ -39,7 +48,7 @@
   },
   "license": "UNLICENSED",
   "main": "./dist/index.js",
-  "name": "@gemunion/contracts-erc677",
+  "name": "@gemunion/contracts-open-sea",
   "peerDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
