--- a/contracts/polygon/package.json
+++ b/contracts/polygon/package.json
@@ -5,6 +5,11 @@
     "url": "https://gemunion.io/"
   },
   "dependencies": {
+    "@gemunion/contracts-access": "^5.0.28",
+    "@gemunion/contracts-constants": "^5.0.28",
+    "@gemunion/contracts-erc20": "^5.0.28",
+    "@gemunion/contracts-mocks": "^5.0.28",
+    "@gemunion/contracts-utils": "^5.0.28",
     "@nomicfoundation/hardhat-ignition": "0.15.4",
     "@nomicfoundation/hardhat-ignition-ethers": "0.15.4",
     "@nomicfoundation/hardhat-toolbox": "5.0.0"
@@ -16,7 +21,6 @@
     "@nomicfoundation/hardhat-network-helpers": "1.0.10",
     "@nomicfoundation/hardhat-verify": "2.0.7",
     "@openzeppelin/contracts": "5.0.2",
-    "@openzeppelin/test-helpers": "0.5.16",
     "@typechain/ethers-v6": "0.5.1",
     "@typechain/hardhat": "9.1.0",
     "@types/chai": "4.3.16",
@@ -39,7 +43,7 @@
   },
   "license": "UNLICENSED",
   "main": "./dist/index.js",
-  "name": "@gemunion/contracts-erc677",
+  "name": "@gemunion/contracts-polygon",
   "peerDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
