--- a/contracts/open-sea/package.json
+++ b/contracts/open-sea/package.json
@@ -5,13 +5,13 @@
     "url": "https://gemunion.io/"
   },
   "dependencies": {
-    "@gemunion/contracts-access": "^5.0.28",
-    "@gemunion/contracts-constants": "^5.0.28",
-    "@gemunion/contracts-erc1363": "^5.0.28",
-    "@gemunion/contracts-erc721": "^5.0.28",
-    "@gemunion/contracts-erc721e": "^5.0.28",
-    "@gemunion/contracts-mocks": "^5.0.28",
-    "@gemunion/contracts-utils": "^5.0.28",
+    "@gemunion/contracts-access": "5.0.34",
+    "@gemunion/contracts-constants": "5.0.34",
+    "@gemunion/contracts-erc1363": "5.0.34",
+    "@gemunion/contracts-erc721": "5.0.34",
+    "@gemunion/contracts-erc721e": "5.0.34",
+    "@gemunion/contracts-mocks": "5.0.34",
+    "@gemunion/contracts-utils": "5.0.34",
     "@nomicfoundation/hardhat-ignition": "0.15.5",
     "@nomicfoundation/hardhat-ignition-ethers": "0.15.5",
     "@nomicfoundation/hardhat-toolbox": "5.0.0"
