--- a/contracts/erc677/package.json
+++ b/contracts/erc677/package.json
@@ -1,6 +1,6 @@
 {
   "author": {
-    "email": "trejgun@gemunion.io",
+    "email": "trejgun+opensource@gmail.com",
     "name": "TrejGun",
     "url": "https://ethberry.io/"
   },
