--- a/contracts/dropbox/package.json
+++ b/contracts/dropbox/package.json
@@ -29,7 +29,6 @@
   "description": "Collection of contracts and presets",
   "devDependencies": {
     "@chainlink/contracts": "1.3.0",
-    "@nomiclabs/hardhat-web3": "2.0.1",
     "@openzeppelin/contracts": "5.2.0",
     "@openzeppelin/test-helpers": "0.5.16",
     "@types/chai": "4.3.20",
@@ -41,8 +40,7 @@
     "hardhat-deploy": "0.14.0",
     "solhint": "5.0.5",
     "solhint-plugin-prettier": "0.1.0",
-    "ts-node": "10.9.2",
-    "web3": "1.10.4"
+    "ts-node": "10.9.2"
   },
   "engines": {
     "node": ">=22"
