--- a/contracts/general/package.json
+++ b/contracts/general/package.json
@@ -27,7 +27,6 @@
   },
   "description": "Collection of contracts and presets",
   "devDependencies": {
-    "@nomiclabs/hardhat-web3": "2.0.1",
     "@openzeppelin/contracts": "5.2.0",
     "@types/chai": "4.3.20",
     "@types/mocha": "10.0.10",
@@ -38,8 +37,7 @@
     "hardhat-deploy": "0.14.0",
     "solhint": "5.0.5",
     "solhint-plugin-prettier": "0.1.0",
-    "ts-node": "10.9.2",
-    "web3": "1.10.4"
+    "ts-node": "10.9.2"
   },
   "engines": {
     "node": ">=22"
