--- a/contracts/open-sea/package.json
+++ b/contracts/open-sea/package.json
@@ -23,7 +23,6 @@
     "@nomicfoundation/hardhat-ethers": "3.0.8",
     "@nomicfoundation/hardhat-network-helpers": "1.0.12",
     "@nomicfoundation/hardhat-verify": "2.0.12",
-    "@nomiclabs/hardhat-web3": "2.0.1",
     "@openzeppelin/contracts": "5.2.0",
     "@openzeppelin/test-helpers": "0.5.16",
     "@typechain/ethers-v6": "0.5.1",
@@ -40,8 +39,7 @@
     "solhint-plugin-prettier": "0.1.0",
     "solidity-coverage": "0.8.14",
     "ts-node": "10.9.2",
-    "typechain": "8.3.2",
-    "web3": "1.10.4"
+    "typechain": "8.3.2"
   },
   "engines": {
     "node": ">=22"
