--- a/contracts/polygon/package.json
+++ b/contracts/polygon/package.json
@@ -35,8 +35,7 @@
     "solhint-plugin-prettier": "0.1.0",
     "solidity-coverage": "0.8.14",
     "ts-node": "10.9.2",
-    "typechain": "8.3.2",
-    "web3": "1.10.4"
+    "typechain": "8.3.2"
   },
   "engines": {
     "node": ">=22"
