--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,4 @@
 {
-  "extends": ["github>trejgun/renovate-config"],
+  "extends": ["github>gemunion/renovate-config"],
   "baseBranches": ["master"]
 }
